--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="./resumen.html" target="_blank" rel="noopener noreferrer">Resumen</a>
+    <hr>
     <div class="containerNewells"></div>
     <div class="containerRedelec"></div>
     <div class="containerUniversal"></div>
