--- a/resumen.html
+++ b/resumen.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="./index.html" target="_blank" rel="noopener noreferrer">Index</a>
     <div class="container"></div>
     <script src="newells.js"></script>
     <script src="redelec.js"></script>
